<resources>
    <string name="app_name">PlayListMaker</string>
    <string name="play_list">Playlist maker</string>
    <string name="search">Поиск</string>
    <string name="media">Медиатека</string>
    <string name="setting">Настройки</string>
    <string name="dark_theme">Темная тема</string>
    <string name="impart">Поделиться приложением</string>
    <string name="support">Написать в поддержку</string>
    <string name="agree">Пользовательское соглашение</string>
    <string name="thanksForDevelopers">Спасибо разработчикам и разработчицам за крутое приложение!</string>
    <string name="subjectForDevelopers">Сообщение разработчикам и разработчицам приложения Playlist Maker</string>
    <string name="url_course_android_dev">https://practicum.yandex.ru/profile/android-developer/</string>
    <string name="url_practicum_offer">https://yandex.ru/legal/practicum_offer</string>
    <string name="email_developer">shchegolyaeva32@yandex.ru</string>
    <string name="nothing_found">Ничего не нашлось</string>
    <string name="something_went_wrong">Что-то пошло не так</string>
    <string name="update">Обновить</string>
    <string name="internet_not_connect">Проблемы со связью\n\n Загрузка не удалась. Проверьте подключение к интернету</string>
    <string name="track_poster">track poster</string>
    <string name="track_duration">Длительность</string>
    <string name="album">Альбом</string>
    <string name="track_year">Год</string>
    <string name="track_genre">Жанр</string>
    <string name="country">Страна</string>
    <string name="favorite_tracks">Избранные треки</string>
    <string name="playlists">Плэйлисты</string>
    <string name="library_is_empty">Ваша медиатека пуста</string>
    <string name="new_playlist">Новый плейлист</string>
    <string name="have_no_playlists">Вы не создали\nни одного плейлиста</string>
    <string name="name_of_playlist">Название*</string>
    <string name="description">Описание</string>
    <string name="create">Создать</string>
    <string name="needed_permission">Нужно разрешение</string>
    <string name="fully_create_playlist">Завершить создание плэйлиста?</string>
    <string name="unsaved_information_deleted">Все несохраненные данные будут потеряны</string>
    <string name="cancel">Отмена</string>
    <string name="complete">Завершить</string>
    <string name="playlist_created">Пдэйлист %1$s создан</string>
    <string name="adding_to_playlist_success">Добавлено в плейлист %1$s</string>
    <string name="adding_to_playlist_declined">Трек уже добавлен в плейлист %1$s</string>
    <string name="add_to_playlist">Добавить в плейлист</string>
    <string name="share">Поделиться</string>
    <string name="edit_details">Редактировать информацию</string>
    <string name="delete_playlist">Удалить плейлист</string>
    <string name="delete_track_dialogue">Хотите удалить трек?</string>
    <string name="yes_dialogue">ДА</string>
    <string name="no_dialogue">НЕТ</string>
    <string name="playlist_is_empty">В этом плейлисте нет списка треков, которым можно поделиться</string>
    <string name="want_to_delete_playlist">Хотите удалить плейлист «%1$s»?</string>
    <string name="save_text">Сохранить</string>
    <string name="edit_playlist_toolbar_text">Редактировать</string>
</resources>