<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="?attr/colorPrimaryVariant"
    android:orientation="vertical">

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="56dp"
        android:layout_marginStart="16dp"
        android:gravity="center"
        android:fontFamily="@font/ys_display_regular"
        android:text="@string/setting"
        android:textColor="?attr/colorOnPrimary"
        android:textSize="@dimen/text_size" />

    <FrameLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="40dp">

        <com.google.android.material.switchmaterial.SwitchMaterial
            android:id="@+id/themeSwitcher"
            android:text="Темная тема"
            android:layout_marginHorizontal="16dp"
            android:layout_gravity="start"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:theme="@style/SCBSwitch"
            android:layout_alignParentRight="true"
            android:checked="false"
            android:textColor="?attr/colorOnPrimary"
            android:layout_marginVertical="@dimen/margin_vertical"/>

    </FrameLayout>

    <FrameLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

        <TextView style="@style/TextStyleSetting"
            android:text="@string/impart"
            android:id="@+id/share_app"/>

        <ImageView
            android:layout_width="16dp"
            android:layout_height="18dp"
            android:src="@drawable/ic_vector2"
            android:layout_gravity="end|center_vertical"
            android:layout_marginVertical="@dimen/margin_vertical"
            android:layout_marginEnd="@dimen/margin_end_start" />
    </FrameLayout>


    <FrameLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

    <TextView style="@style/TextStyleSetting"
        android:text="@string/support"
        android:id="@+id/support"/>

    <ImageView
        android:layout_width="20dp"
        android:layout_height="19dp"
        android:src="@drawable/ic_impart1"
        android:layout_gravity="end|center_vertical"
        android:layout_marginVertical="@dimen/margin_vertical"
        android:layout_marginEnd="@dimen/margin_end_start"/>
    </FrameLayout>

    <FrameLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

        <TextView style="@style/TextStyleSetting"
            android:text="@string/agree"
            android:id="@+id/agree"/>

        <ImageView
            android:layout_width="8dp"
            android:layout_height="14dp"
            android:src="@drawable/ic_vector3"
            android:layout_gravity="end|center_vertical"
            android:layout_marginVertical="@dimen/margin_vertical"
            android:layout_marginEnd="@dimen/margin_end_start"/>
    </FrameLayout>

</LinearLayout>

