<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:background="?attr/colorPrimaryVariant"
    android:layout_height="match_parent">

    <androidx.constraintlayout.widget.Guideline
        android:id="@+id/left_guideLine_16"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        app:layout_constraintGuide_begin="16dp" />

    <androidx.constraintlayout.widget.Guideline
        android:id="@+id/right_guideLine_16"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        app:layout_constraintGuide_end="16dp" />

    <androidx.constraintlayout.widget.Guideline
        android:id="@+id/left_guideLine_24"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        app:layout_constraintGuide_begin="24dp" />

    <androidx.constraintlayout.widget.Guideline
        android:id="@+id/right_guideLine_24"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        app:layout_constraintGuide_end="24dp" />

    <FrameLayout
        android:id="@+id/toolbar"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        android:layout_width="match_parent"
        android:layout_height="wrap_content">


        <ImageView
            android:id="@+id/return_n"
            android:layout_width="16dp"
            android:layout_height="16dp"
            android:layout_marginTop="20dp"
            android:layout_marginLeft="20dp"
            android:src="@drawable/ic_arrow"
            app:iconGravity="textStart" />
        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginLeft="64dp"
            android:layout_marginTop="14dp"
            android:text="@string/search"
            android:textColor="?attr/colorOnPrimary"
            android:textSize="@dimen/text_size"
            android:fontFamily="@font/ys_display_regular"/>
    </FrameLayout>

    <ImageView
        android:id="@+id/track_poster"
        android:layout_width="0dp"
        android:layout_height="0dp"
        android:contentDescription="@string/track_poster"
        app:layout_constraintDimensionRatio="1:1"
        app:layout_constraintEnd_toEndOf="@id/right_guideLine_24"
        app:layout_constraintStart_toStartOf="@id/left_guideLine_24"
        app:layout_constraintBottom_toBottomOf="@id/track_name"
        app:layout_constraintTop_toBottomOf="@id/toolbar" />

    <TextView
        android:id="@+id/track_name"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="26dp"
        android:ellipsize="end"
        android:fontFamily="@font/ys_display_medium"
        android:maxLines="1"
        style="@style/track_name_style_player"
        android:textSize="22sp"
        app:layout_constraintEnd_toEndOf="@id/right_guideLine_24"
        app:layout_constraintStart_toStartOf="@id/left_guideLine_24"
        app:layout_constraintTop_toBottomOf="@+id/track_poster" />

    <TextView
        android:id="@+id/artist_name"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="12dp"
        android:ellipsize="end"
        android:fontFamily="@font/ys_display_medium"
        android:maxLines="1"
        style="@style/track_name_style_player"
        android:textSize="14sp"
        app:layout_constraintEnd_toEndOf="@id/right_guideLine_24"
        app:layout_constraintStart_toStartOf="@id/left_guideLine_24"
        app:layout_constraintTop_toBottomOf="@+id/track_name" />

    <ImageView
        android:id="@+id/play_button"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="15dp"
        android:src="@drawable/ic_baseline_play_circle_24"
        app:layout_constraintEnd_toEndOf="@id/right_guideLine_24"
        app:layout_constraintStart_toStartOf="@id/left_guideLine_24"
        app:layout_constraintTop_toBottomOf="@+id/artist_name" />

    <ImageView
        android:id="@+id/add_song_button"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:src="@drawable/add_song_button"
        app:layout_constraintBottom_toBottomOf="@+id/play_button"
        app:layout_constraintStart_toStartOf="@id/left_guideLine_24"
        app:layout_constraintTop_toTopOf="@+id/play_button" />

    <ImageView
        android:id="@+id/add_favourite_song"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:src="@drawable/add_favourite_song"
        app:layout_constraintBottom_toBottomOf="@+id/play_button"
        app:layout_constraintEnd_toEndOf="@id/right_guideLine_24"
        app:layout_constraintTop_toTopOf="@+id/play_button" />

    <TextView
        android:id="@+id/track_time"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="4dp"
        android:fontFamily="@font/ys_display_medium"
        android:maxLines="1"
        android:text="00:00"
        style="@style/track_name_style_player"
        android:textSize="14sp"
        app:layout_constraintEnd_toEndOf="@id/play_button"
        app:layout_constraintStart_toStartOf="@id/play_button"
        app:layout_constraintTop_toBottomOf="@+id/play_button" />

    <TextView
        android:id="@+id/track_duration"
        android:layout_width="wrap_content"
        android:layout_height="20dp"
        android:fontFamily="@font/ys_display_medium"
        android:gravity="center"
        android:maxLines="1"
        android:text="@string/track_duration"
        android:textSize="13sp"
        app:layout_constraintEnd_toStartOf="@id/track_duration_value"
        app:layout_constraintStart_toStartOf="@id/left_guideLine_16"
        app:layout_constraintTop_toBottomOf="@+id/track_time"
        app:layout_constraintBottom_toTopOf="@id/album"/>

    <TextView
        android:id="@+id/album"
        android:layout_width="wrap_content"
        android:layout_height="20dp"
        android:fontFamily="@font/ys_display_medium"
        android:gravity="center"
        android:text="@string/album"
        android:textSize="13sp"
        app:layout_constraintEnd_toStartOf="@id/album_value"
        app:layout_constraintStart_toStartOf="@id/left_guideLine_16"
        app:layout_constraintTop_toBottomOf="@+id/track_duration"
        app:layout_constraintBottom_toTopOf="@id/track_release_year"/>

    <TextView
        android:id="@+id/track_release_year"
        android:layout_width="wrap_content"
        android:layout_height="20dp"
        android:fontFamily="@font/ys_display_medium"
        android:gravity="center"
        android:text="@string/track_year"
        android:textSize="13sp"
        app:layout_constraintEnd_toStartOf="@id/track_release_year_value"
        app:layout_constraintStart_toStartOf="@id/left_guideLine_16"
        app:layout_constraintTop_toBottomOf="@+id/album"
        app:layout_constraintBottom_toTopOf="@+id/track_genre"/>

    <TextView
        android:id="@+id/track_genre"
        android:layout_width="wrap_content"
        android:layout_height="20dp"
        android:fontFamily="@font/ys_display_medium"
        android:gravity="center"
        android:text="@string/track_genre"
        android:textSize="13sp"
        app:layout_constraintBottom_toTopOf="@id/track_country"
        app:layout_constraintEnd_toStartOf="@id/track_genre_value"
        app:layout_constraintStart_toStartOf="@id/left_guideLine_16"
        app:layout_constraintTop_toBottomOf="@+id/track_release_year" />

    <TextView
        android:id="@+id/track_country"
        android:layout_width="wrap_content"
        android:layout_height="20dp"
        android:fontFamily="@font/ys_display_medium"
        android:gravity="center"
        android:text="@string/country"
        android:textSize="13sp"
        android:layout_marginBottom="21dp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toStartOf="@id/track_country_value"
        app:layout_constraintStart_toStartOf="@id/left_guideLine_16"
        app:layout_constraintTop_toBottomOf="@+id/track_genre" />


    <TextView
        android:id="@+id/track_duration_value"
        style="@style/track_name_style_player"
        android:layout_width="0dp"
        android:layout_height="20dp"
        android:fontFamily="@font/ys_display_medium"
        android:gravity="center|end"
        android:textSize="13sp"
        app:layout_constraintBottom_toTopOf="@+id/album_value"
        app:layout_constraintEnd_toEndOf="@id/right_guideLine_16"
        app:layout_constraintStart_toEndOf="@id/track_duration"
        app:layout_constraintTop_toBottomOf="@+id/track_time" />

    <TextView
        android:id="@+id/album_value"
        style="@style/track_name_style_player"
        android:layout_width="0dp"
        android:layout_height="20dp"
        android:fontFamily="@font/ys_display_medium"
        android:gravity="center|end"
        android:textSize="13sp"
        app:layout_constraintBottom_toTopOf="@+id/track_release_year_value"
        app:layout_constraintEnd_toEndOf="@id/right_guideLine_16"
        app:layout_constraintStart_toEndOf="@id/album"
        app:layout_constraintTop_toBottomOf="@+id/track_duration" />

    <TextView
        android:id="@+id/track_release_year_value"
        style="@style/track_name_style_player"
        android:layout_width="0dp"
        android:layout_height="20dp"
        android:fontFamily="@font/ys_display_medium"
        android:gravity="center|end"
        android:textSize="13sp"
        app:layout_constraintBottom_toTopOf="@+id/track_genre_value"
        app:layout_constraintEnd_toEndOf="@id/right_guideLine_16"
        app:layout_constraintStart_toEndOf="@id/track_release_year"
        app:layout_constraintTop_toBottomOf="@+id/album" />

    <TextView
        android:id="@+id/track_genre_value"
        style="@style/track_name_style_player"
        android:layout_width="0dp"
        android:layout_height="20dp"
        android:fontFamily="@font/ys_display_medium"
        android:gravity="center|end"
        android:textSize="13sp"
        app:layout_constraintBottom_toTopOf="@+id/track_country_value"
        app:layout_constraintEnd_toEndOf="@id/right_guideLine_16"
        app:layout_constraintStart_toEndOf="@id/track_genre"
        app:layout_constraintTop_toBottomOf="@+id/track_release_year" />

    <TextView
        android:id="@+id/track_country_value"
        style="@style/track_name_style_player"
        android:layout_width="0dp"
        android:layout_height="20dp"
        android:fontFamily="@font/ys_display_medium"
        android:gravity="center|end"
        android:textSize="13sp"
        android:layout_marginBottom="21dp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="@id/right_guideLine_16"
        app:layout_constraintStart_toEndOf="@id/track_country"
        app:layout_constraintTop_toBottomOf="@+id/track_genre" />

</androidx.constraintlayout.widget.ConstraintLayout>