<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="?attr/colorPrimaryVariant"
    android:orientation="vertical"
    android:paddingVertical="14dp">

    <FrameLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content">


        <ImageView
            android:id="@+id/return_n"
            android:layout_width="16dp"
            android:layout_height="16dp"
            android:layout_marginTop="20dp"
            android:layout_marginLeft="20dp"
            android:src="@drawable/ic_arrow"
            app:iconGravity="textStart" />
        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginLeft="64dp"
            android:layout_marginTop="14dp"
            android:text="@string/search"
            android:textColor="?attr/colorOnPrimary"
            android:textSize="@dimen/text_size"
            android:fontFamily="@font/ys_display_regular"/>
    </FrameLayout>

    <FrameLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginVertical="24dp">

        <EditText
            android:id="@+id/search_content"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginStart="16dp"
            android:layout_marginEnd="16dp"
            android:background="@drawable/shape_edit"
            android:drawableLeft="@drawable/ic_search"
            android:drawablePadding="9dp"
            android:hint="@string/search"
            android:textColorHint="?attr/colorAccent"
            android:inputType="text"
            android:lines="1"
            android:maxLength="50"
            android:padding="12dp"
            android:textCursorDrawable="@drawable/color_cursor"
            style="@style/EditUnderBar"
            android:imeOptions="actionDone"
            android:singleLine="true"/>

        <Button
            android:id="@+id/exit"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="end"
            android:layout_marginEnd="16dp"
            android:backgroundTint="#E6E8EB"
            android:stateListAnimator="@null"
            android:visibility="gone"
            app:iconTint="@color/grey"
            android:drawableRight="@drawable/ic_vector4" />


    </FrameLayout>

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:id="@+id/history_search_group"
        android:visibility="gone">

        <TextView
            android:id="@+id/you_search"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="Вы искали"
            android:textSize="19sp"
            android:gravity="center"
            android:layout_marginTop="18dp"
            android:layout_marginBottom="12dp"
            android:textStyle="bold"
            android:textColor="?attr/colorOnPrimary"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            android:paddingBottom="20dp"
            tools:ignore="MissingConstraints">
        </TextView>


        <androidx.recyclerview.widget.RecyclerView
            android:id="@+id/recycler_view_history"
            android:layout_width="match_parent"
            android:layout_height="0dp"
            android:layout_margin="8dp"
            app:layout_constraintBottom_toTopOf="@+id/clean_history_button"
            app:layout_constraintTop_toBottomOf="@+id/you_search"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHeight_default="wrap"
            app:layout_constraintHorizontal_chainStyle="packed"
            app:layout_constraintStart_toStartOf="parent"
            android:paddingBottom="24dp"/>

        <Button
            android:id="@+id/clean_history_button"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center_horizontal"
            android:text="Очистить историю"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            android:textColor="?attr/colorPrimaryVariant"
            app:backgroundTint="?attr/colorOnPrimary"
            app:cornerRadius="54dp"
            android:fontFamily="@font/ys_display_medium"
            android:inputType="textCapWords" />

    </androidx.constraintlayout.widget.ConstraintLayout>




    <LinearLayout android:id="@+id/error_block_nothing_found"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        android:paddingTop = "100dp"
        android:visibility = "gone">

        <ImageView android:id="@+id/placeholderImage"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:textAlignment="center"
            android:textStyle="bold"
            android:textColor="@color/black"
            android:src="@drawable/ic_light_modi" />

        <TextView android:id="@+id/placeholderMessage"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:textAlignment="center"
            android:textSize="19sp"
            android:textStyle="bold"
            android:textColor="?attr/colorOnPrimary"
            android:paddingTop ="16dp"
            android:text="@string/nothing_found"/>
    </LinearLayout>

    <LinearLayout android:id="@+id/error_block_setting"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        android:paddingTop = "100dp"
        android:visibility = "gone">

        <ImageView android:id="@+id/placeholderImage_2"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:textAlignment="center"
            android:textStyle="bold"
            android:textColor="@color/black"
            android:src="@drawable/ic_light_modi_2" />

        <TextView android:id="@+id/placeholderMessage_2"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:textAlignment="center"
            android:textSize="19sp"
            android:textStyle="bold"
            android:textColor="?attr/colorOnPrimary"
            android:paddingTop ="16dp"
            android:text="@string/internet_not_connect"/>
        <Button
            android:id="@+id/button_update"
            android:layout_width ="wrap_content"
            android:layout_height ="wrap_content"
            android:text="@string/update"
            android:layout_gravity="center_horizontal"
            app:cornerRadius="54dp"
            android:backgroundTint="?attr/colorOnPrimary"
            android:textColor="?attr/colorPrimaryVariant"
            android:fontFamily="@font/ys_display_medium"
            android:inputType="textCapWords"/>


    </LinearLayout>


    <androidx.recyclerview.widget.RecyclerView
        android:id="@+id/recyclerView"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        app:layoutManager="androidx.recyclerview.widget.LinearLayoutManager"/>

</LinearLayout>